--- a/translations/kangyur/placeholders/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
+++ b/translations/kangyur/placeholders/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
@@ -20,11 +20,11 @@
                 <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.10 <date>2019</date>
+                <edition>v 0.1.11 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-065-004"/>
                 <date/>
             </publicationStmt>
@@ -40,7 +40,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-29T13:47:06.839Z" user="admin">29/11/2022 13:47:06</note>
+                <note type="lastUpdated" date-time="2023-01-05T08:05:22.188Z" user="admin">05/01/2023 08:05:22</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-09T06:16:46.43Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -58,6 +58,8 @@
                 <note type="updated" update="translation-status" value="2.c" date-time="2022-10-27T09:53:44.112Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.1.9" date-time="2022-10-27T09:53:44.112Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.1.10" date-time="2022-11-29T13:47:01.28Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2023-01-05T08:05:16.527Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.1.11" date-time="2023-01-05T08:05:16.527Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
