--- a/translations/kangyur/placeholders/072-031_toh331-the_sutra_of_the_moon.xml
+++ b/translations/kangyur/placeholders/072-031_toh331-the_sutra_of_the_moon.xml
@@ -4,17 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">zla ba'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">candrasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Moon</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">candrasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">zla ba'i mdo/</title>
                 <title type="otherTitle" xml:lang="en">[Note: similar to Toh 42 (translated from Pali) but not the same.]</title>
-                <author role="translatorMain" ref="contributors.xml#team-50"/>
-                <consultant role="projectManager" ref="contributors.xml#person-316">Giuliano Francesco Proença</consultant>
-                <author role="translatorEng" ref="contributors.xml#person-316">Giuliano Proença</author>
-                <editor role="proofreader" ref="contributors.xml#person-359">Daniela Espíndola</editor>
+                <author role="translatorMain" ref="eft:team-50"/>
+                <consultant role="projectManager" ref="eft:person-316">Giuliano Francesco Proença</consultant>
+                <author role="translatorEng" ref="eft:person-316">Giuliano Proença</author>
+                <editor role="proofreader" ref="eft:person-359">Daniela Espíndola</editor>
+                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2020</date>
+                <edition>v 0.0.9 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.g">
@@ -33,17 +34,20 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-30T11:22:30.036Z" user="admin">30/01/2023 11:22:30</note>
-    <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:51:52.984Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:51:52.984Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:52:46.21Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-30T09:52:46.21Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-11T14:06:23.284Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-11T14:08:19.081Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-01-11T14:10:13.55Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-03-12T14:59:50.215Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.6" date-time="2021-03-12T14:59:50.215Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.7" date-time="2021-03-12T15:01:29.545Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-01-30T11:22:24.414Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-30T11:22:24.414Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-01-30T12:40:08.555Z" user="admin">30/01/2023 12:40:08</note>
+                <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:51:52.984Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:51:52.984Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:52:46.21Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-30T09:52:46.21Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-11T14:06:23.284Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-11T14:08:19.081Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2021-01-11T14:10:13.55Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-03-12T14:59:50.215Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2021-03-12T14:59:50.215Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2021-03-12T15:01:29.545Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-01-30T11:22:24.414Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-30T11:22:24.414Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-01-30T12:40:02.861Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
