--- a/translations/kangyur/placeholders/066-011_toh253-the_sutra_on_the_threefold_teaching.xml
+++ b/translations/kangyur/placeholders/066-011_toh253-the_sutra_on_the_threefold_teaching.xml
@@ -10,23 +10,27 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">chos gsum pa zhes bya ba'i mdo</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">tridharmakanāmasūtra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-066-011"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh253" type="text">
                     <ref>Toh 253</ref>
                     <biblScope>vol.66, ff.69v-70v(pp.138-140)</biblScope>
-                    <location count-pages="3">
-                        <start volume="66" page="140"/>
-                        <end volume="66" page="142"/>
+                    <location work="UT4CZ5369" count-pages="3">
+                        <volume number="66" start-page="138" end-page="140"/>
                     </location>
                     <idno parent-id="O1JC114941JC14668" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC11905" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:33:50 by admin</note>
+                <note type="lastUpdated" date-time="2023-01-30T15:05:17.931Z" user="admin">30/01/2023 15:05:17</note>    <note type="updated" update="translation-status" value="4" date-time="2023-01-30T15:05:13.657Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-01-30T15:05:13.657Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
