--- a/translations/kangyur/placeholders/072-023_toh323-the_single_stanza.xml
+++ b/translations/kangyur/placeholders/072-023_toh323-the_single_stanza.xml
@@ -8,23 +8,27 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">ekagāthā</title>
                 <title type="mainTitle" xml:lang="en">The Single Stanza</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-072-023"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh323" type="text">
                     <ref>Toh 323</ref>
                     <biblScope>vol.72, ff.204r-204r(pp.407-407)</biblScope>
-                    <location count-pages="1">
-                        <start volume="72" page="409"/>
-                        <end volume="72" page="409"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="72" start-page="407" end-page="407"/>
                     </location>
                     <idno parent-id="O1JC114941JC14668" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC11999" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:30:07 by admin</note>
+                <note type="lastUpdated" date-time="2023-01-30T15:05:52.688Z" user="admin">30/01/2023 15:05:52</note>    <note type="updated" update="translation-status" value="4" date-time="2023-01-30T15:05:48.412Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-01-30T15:05:48.412Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
