--- a/translations/kangyur/placeholders/036-009_toh44-38-chapter_38_the_dwellings_of_bodhisattvas.xml
+++ b/translations/kangyur/placeholders/036-009_toh44-38-chapter_38_the_dwellings_of_bodhisattvas.xml
@@ -14,10 +14,10 @@
                 <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2022</date>
+                <edition>v 0.0.11 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.c">
                 <idno xml:id="UT22084-036-009"/>
                 <date/>
             </publicationStmt>
@@ -33,7 +33,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-09-14T07:45:34.952Z" user="admin">14/09/2022 07:45:34</note>
+                <note type="lastUpdated" date-time="2023-01-31T07:57:45.506Z" user="admin">31/01/2023 07:57:45</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:19:39.295Z" user="amy">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-11T05:18:35.836Z" user="amy">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-01-06T13:07:38.914Z" user="line-tofte">Auto (update-contributors)</note>
@@ -48,6 +48,8 @@
                 <note type="updated" update="text-version" value="0.0.9" date-time="2022-09-14T07:32:22.011Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2022-09-14T07:45:26.912Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2022-09-14T07:45:26.912Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2023-01-31T07:57:39.823Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-01-31T07:57:39.823Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
