--- a/translations/kangyur/placeholders/072-038_toh338-classification_of_acts.xml
+++ b/translations/kangyur/placeholders/072-038_toh338-classification_of_acts.xml
@@ -18,11 +18,11 @@
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2019</date>
+                <edition>v 0.0.9 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-072-038"/>
                 <date/>
             </publicationStmt>
@@ -38,7 +38,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-30T14:39:18.985Z" user="admin">30/01/2023 14:39:18</note>
+                <note type="lastUpdated" date-time="2023-01-31T10:00:00.78Z" user="admin">31/01/2023 10:00:00</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2019-08-11T07:39:21.424Z" user="john">2.e</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:12:53.765Z" user="mike">2.f</note>
@@ -52,6 +52,8 @@
                 <note type="updated" update="text-version" value="0.0.7" date-time="2022-12-09T09:11:15.237Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2023-01-30T14:39:14.736Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-30T14:39:14.736Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-01-31T09:59:55.116Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-01-31T09:59:55.116Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
