--- a/translations/kangyur/placeholders/072-038_toh338-classification_of_acts.xml
+++ b/translations/kangyur/placeholders/072-038_toh338-classification_of_acts.xml
@@ -16,9 +16,10 @@
                 <consultant role="dharmaMaster" ref="eft:person-25">Lama Kunga Thartse Rinpoche</consultant>
                 <editor role="projectEditor" ref="eft:person-262">David Higgins</editor>
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
+                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2019</date>
+                <edition>v 0.0.10 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -38,7 +39,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-31T10:00:00.78Z" user="admin">31/01/2023 10:00:00</note>
+                <note type="lastUpdated" date-time="2023-01-31T10:00:36.486Z" user="admin">31/01/2023 10:00:36</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2019-08-11T07:39:21.424Z" user="john">2.e</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:12:53.765Z" user="mike">2.f</note>
@@ -54,6 +55,7 @@
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-30T14:39:14.736Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2023-01-31T09:59:55.116Z" user="line-tofte">2.a</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-01-31T09:59:55.116Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-01-31T10:00:30.726Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
