--- a/translations/kangyur/placeholders/062-016_toh216-the_sutra_on_eliminating_ajatasatrus_remorse.xml
+++ b/translations/kangyur/placeholders/062-016_toh216-the_sutra_on_eliminating_ajatasatrus_remorse.xml
@@ -20,11 +20,11 @@
                 <sponsor ref="sponsors.xml#sponsor-186">苏享国阖家, 马春树, 苏慧, 姚雨含, 马鑫, 刘弈汐, 林媛媛, 黄璎珞</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2019</date>
+                <edition>v 0.0.11 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-062-016"/>
                 <date/>
             </publicationStmt>
@@ -40,7 +40,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-23T08:55:37.66Z" user="admin">23/01/2023 08:55:37</note>
+                <note type="lastUpdated" date-time="2023-02-02T14:08:03.938Z" user="admin">02/02/2023 14:08:03</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2019-05-24T15:11:16.945Z" user="john">2.g</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:01:23.782Z" user="mike">2.h</note>
@@ -58,6 +58,8 @@
                 <note type="updated" update="text-version" value="0.0.9" date-time="2022-07-26T06:53:31.169Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2023-01-23T08:55:33.444Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2023-01-23T08:55:33.444Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2023-02-02T14:07:59.686Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-02-02T14:07:59.686Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
