--- a/translations/kangyur/placeholders/062-016_toh216-the_sutra_on_eliminating_ajatasatrus_remorse.xml
+++ b/translations/kangyur/placeholders/062-016_toh216-the_sutra_on_eliminating_ajatasatrus_remorse.xml
@@ -17,10 +17,11 @@
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
                 <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
                 <sponsor ref="sponsors.xml#sponsor-186">苏享国阖家, 马春树, 苏慧, 姚雨含, 马鑫, 刘弈汐, 林媛媛, 黄璎珞</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2019</date>
+                <edition>v 0.0.12 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -40,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-02T14:08:03.938Z" user="admin">02/02/2023 14:08:03</note>
+                <note type="lastUpdated" date-time="2023-02-02T14:08:36.53Z" user="admin">02/02/2023 14:08:36</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2019-05-24T15:11:16.945Z" user="john">2.g</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:01:23.782Z" user="mike">2.h</note>
@@ -60,6 +61,7 @@
                 <note type="updated" update="text-version" value="0.0.10" date-time="2023-01-23T08:55:33.444Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2023-02-02T14:07:59.686Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-02-02T14:07:59.686Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2023-02-02T14:08:35.061Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
