--- a/translations/kangyur/placeholders/049-004_toh109-the_sutra_on_the_mountain_gayasirsa.xml
+++ b/translations/kangyur/placeholders/049-004_toh109-the_sutra_on_the_mountain_gayasirsa.xml
@@ -24,11 +24,11 @@
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.13 <date>2019</date>
+                <edition>v 0.1.14 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-049-004"/>
                 <date/>
             </publicationStmt>
@@ -44,7 +44,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-08T11:32:12.012Z" user="admin">08/02/2023 11:32:12</note>
+                <note type="lastUpdated" date-time="2023-02-15T14:45:11.986Z" user="admin">15/02/2023 14:45:11</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-08T07:42:51.906Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:59.245Z" user="mike">2.f</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2020-10-12T08:30:54.373Z" user="line-tofte">Auto (update-contributors)</note>
@@ -65,6 +65,8 @@
                 <note type="updated" update="translation-status" value="2.c" date-time="2022-12-21T10:39:45.462Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.1.12" date-time="2022-12-21T10:39:45.462Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.1.13" date-time="2023-02-08T11:32:06.346Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2023-02-15T14:45:06.205Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.1.14" date-time="2023-02-15T14:45:06.205Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
