--- a/translations/kangyur/translations/072-009_toh309_sutra_on_Impermanence.xml
+++ b/translations/kangyur/translations/072-009_toh309_sutra_on_Impermanence.xml
@@ -16,7 +16,7 @@
                 <editor role="TEImarkupEditor" ref="contributors.xml#person-306">Simeon Joffe</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.22.11 <date>2021</date>
+                <edition>v 1.22.12 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -49,7 +49,7 @@
             
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-07T18:23:44.168Z" user="admin">07/02/2023 18:23:44</note>
+                <note type="lastUpdated" date-time="2023-02-15T19:02:30.483Z" user="admin">15/02/2023 19:02:30</note>
                 <note type="updated" update="text-version" value="v 1.21" date-time="2019-06-18T16:25:59.158Z" user="celso">v 1.21 2019</note>
                 <note type="updated" update="text-version" value="v 1.22" date-time="2019-06-21T14:44:35.078Z" user="celso">v 1.22 2019</note>
                 <note type="updated" update="text-version" value="v 1.22.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
@@ -63,6 +63,7 @@
                 <note type="updated" update="text-version" value="1.22.9" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.22.10" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
                 <note type="updated" update="text-version" value="1.22.11" date-time="2023-02-07T18:23:42.683Z" user="john">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.22.12" date-time="2023-02-15T19:02:27.584Z" user="martina-cotter">Added pending links.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -119,7 +120,9 @@
                     <milestone unit="chunk" xml:id="UT22084-072-009-4"/>
                     <p tid="5">The Tibetan canon contains two sūtras with the title <title xml:lang="en">Sūtra on Impermanence
                             </title>(<title xml:lang="Bo-Ltn">mi rtag pa nyid kyi mdo</title>), both found in the same section of
-                        the Kangyur (mdo sde, Toh 309 and 310<ref rend="pending" target="https://read.84000.co/translation/toh310.html" inst="add note, add bibl"/>). The sūtra translated here is the first, the shorter of the two.
+                        the Kangyur (mdo sde, Toh 309 and 310<note place="end" xml:id="UT22084-072-009-34">See DiSimone, Charles and Choi, Jin Kyoung. trans., <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh310.html">The Sūtra on Impermanence (2)</ref>
+                            </title>, Toh 310. </note>). The sūtra translated here is the first, the shorter of the two.
                         Sūtras with equivalent titles are also found in other Buddhist canons, but their contents differ
                         substantially from the one translated here. The Chinese Tripiṭaka, for instance, contains two sūtras so
                         entitled (Taishō nos. 801 and 759), and in the Samyutta Nikāya of the Pāli canon, the collection of
@@ -140,7 +143,7 @@
         <body>
             <div type="translation">
                 <head type="translation" tid="24">The Translation</head>
-                <head type="titleMain" tid="25">The Sūtra on Impermanence</head>
+                <head type="titleMain" tid="25">The Sūtra on Impermanence (1)</head>
                 <div type="section" xml:id="UT22084-072-009-section-1">
                     <milestone unit="chunk" xml:id="UT22084-072-009-6"/>
                     <p tid="7">
@@ -216,6 +219,9 @@
                         kyi bka’ bstan dpe sdur khang (The Tibetan Tripitaka Collation Bureau of the China Tibetology Research
                         Center). 108 volumes. Beijing: krung go’i bod rig pa dpe skrun khang (China Tibetology Publishing House),
                         2006–9, vol. 72, 434–36.</bibl>
+                    <bibl xml:id="UT22084-072-009-35">DiSimone, Charles and Choi, Jin Kyoung, trans. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh310.html">The Sūtra on Impermanence (2)</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Anityatāsūtra</title>, Toh 310). </bibl>
                     <bibl xml:id="UT22084-072-009-19">Nyanaponika Thera, transl.<title xml:lang="en"> Anicca Sutta:
                             Impermanent</title> (SN 36.9), translated from the Pali. <title xml:lang="en">Access to
                             Insight</title>, 30 June 2010, <ref target="http://www.accesstoinsight.org/tipitaka/sn/sn36/sn36.009.nypo.html">www.accesstoinsight.org</ref>. Retrieved on 10 May 2013.</bibl>
